debug-tool-yaml/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: yanqiw.qianyitian.com 
      http:
        paths:
          - backend:
              serviceName: web 
              servicePort: 80
            path: /(.*)
